prevent overflow bottom

--- a/chemie/chemie/static/css/style.css
+++ b/chemie/chemie/static/css/style.css
@@ -660,6 +660,8 @@ p {
 }
 #makeItRain{
   --swing-distance: 30px;
+  --margin-end: 0vh;
+  --margin-start: -100vh;
 }
 
 .element {
@@ -668,16 +670,12 @@ p {
   position: absolute;
   width: 1rem;
   height: 1rem;
-  --margin-end: 0vh;
-  --margin-start: -100vh;
   pointer-events: none; /* Allows clicks to pass through */
 }
 .imageElement {
   z-index: 1000000;
   opacity: 0;
   position: absolute;
-  --margin-end: 0vh;
-  --margin-start: -100vh;
   pointer-events: none; /* Allows clicks to pass through */
 }
 @keyframes swing {
